# careflow_setup

./: .replit  app.py  pyproject.toml  replit.md  test_app.py
.streamlit/: config.toml
attached_assets/: Pasted-sqlalchemy-exc-IntegrityError-psycopg2-errors-ForeignKe_1768406700088.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-Undefin_1765382877326.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-Undefin_1765448928419.txt
database/: __init__.py  models.py
pages/: buildings.py  dashboard.py  gateways.py  live_tracking.py  signal_monitor.py
utils/: auth.py  dwg_parser.py  geojson_renderer.py  mqtt_handler.py  mqtt_publisher.py  signal_processor.py  translations.py  triangulation.py
views/: alert_zones.py  analytics.py  beacons.py  buildings.py  calibration.py  coverage_zones.py  dashboard.py  focus_areas.py  gateway_planning.py  gateways.py  history_playback.py  live_tracking.py  login.py  mqtt_config.py  user_management.py  zones_alerts.py
